--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,7 +1,6 @@
 .btn {
   font-family: inherit;
-
-  padding:  1.1rem 1.8rem;
+  padding:  .8rem 1.4rem;
   border-radius: 0;
   border: 1px solid black;
   background: lightpink;
