--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,9 @@ body {
 
 .header {
   background: white;
+  max-height: 6rem;
   border-bottom: 1px solid black;
-  padding: 20px 0;
+  padding: 1rem 0;
   margin-bottom: 20px;
 }
 
@@ -37,6 +38,25 @@ body {
 .logo {
   font-size: 3rem;
   font-weight: 900;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  color: black;
+  text-decoration: none;
+}
+
+.logoIcon {
+  height: 38px;
+  width: 38px;
+  transition: all .3s ease;
+}
+
+.logoIcon > img {
+  width: 100%;
+}
+
+.logoTitle {
+
 }
 
 .cards {
