--- a/src/components/SectionTitle/SectionTitle.module.css
+++ b/src/components/SectionTitle/SectionTitle.module.css
@@ -2,4 +2,6 @@
   padding: .8rem 3rem ;
   border: 1px solid black;
   font-size: 3rem;
+  background-color: white;
+  filter: drop-shadow(4px 4px 0 black);
 }
