--- a/src/components/Dashboard/DashboardGrid/DashboardGrid.module.css
+++ b/src/components/Dashboard/DashboardGrid/DashboardGrid.module.css
@@ -18,12 +18,12 @@
 .gridContainer {
   display: grid;
   gap: 1rem;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   grid-template-areas:
-    "item1 item2 item3 item4"
-    "item5 item5 item6 item6"
-    "item5 item5 item6 item6"
+    "item1 item2 item3"
+    "item4 item4 item6"
+    "item5 item5 item6"
 }
 
 .item1 {
